--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title class="pageTopTitle" page-id="1">钱包</title>
-    <script src="__PUBLIC__/js/public/rem.js"></script>
-    <link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/public/bottomNav.css"/>
-    <link rel="stylesheet" href="__PUBLIC__/css/public/base.css"/>
-    <link rel="stylesheet" href="__PUBLIC__/css/wallet/wallet.css"/>
-    <link rel="stylesheet"  href="__PUBLIC__/font/iconfont.css"/>
-	<script type="text/javascript" src="../../../public/js/jquery-1.8.3.min.js" ></script>
 
-    
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<title class="pageTopTitle" page-id="1">钱包</title>
+	<script src="__PUBLIC__/js/public/rem.js"></script>
+	<link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
+	<link rel="stylesheet" href="__PUBLIC__/css/public/bottomNav.css" />
+	<link rel="stylesheet" href="__PUBLIC__/css/public/base.css" />
+	<link rel="stylesheet" href="__PUBLIC__/css/wallet/wallet.css" />
+	<link rel="stylesheet" href="__PUBLIC__/font/iconfont.css" />
+	<script type="text/javascript" src="../../../public/js/jquery-1.8.3.min.js"></script>
+
+
 </head>
+
 <body>
-    <div class="user">
-        <!--<div class="header-zp">
+	<div class="user">
+		<!--<div class="header-zp">
             <h3>总收益</h3>
         </div>-->
-        <div class="zjy_box">
-        	<ul class="zjy_ul">
-        		<li class="on">我的钱包</li>
-        		<li>交易历史</li>
-        		<!--<li>终止交易</li>-->
-        	</ul>
-        	<div class="zjy_box_conten">
-        		<div class="zjy_box_conten_item avtive">
-        			<!--总投资按钮-->
-        			<div class="bag-wrap">
+		<div class="zjy_box">
+			<ul class="zjy_ul">
+				<li class="on">我的钱包</li>
+				<li>交易历史</li>
+				<!--<li>终止交易</li>-->
+			</ul>
+			<div class="zjy_box_conten">
+				<div class="zjy_box_conten_item avtive">
+					<!--总投资按钮-->
+					<div class="bag-wrap">
 						<div class="asset">总资产<span style="font-size: .3rem;"></span></div>
 					</div>
-					
+
 					<!--选择付款方式-->
 					<div class="payment">
 						<h3>选择付款方式</h3>
 						<ul class="payment_ul">
-							<li><p class="wq_fa"><span class="payment_active"></span></p>从发票</li>
-							<li><p class="wq_fa"><span></span></p>从账户余额</li>						
+							<li>
+								<p class="wq_fa"><span class="payment_active"></span></p>从发票
+							</li>
+							<li>
+								<p class="wq_fa"><span></span></p>从账户余额
+							</li>
 						</ul>
 						<div class="payment_cont">
 							<div class="payment_cont_item avtive">
@@ -47,69 +53,73 @@
 										1231232132131231232132132121321
 									</textarea>
 									<div class="payment_cont_sox">
-										<p class="payment_cont_qb"><span><img  class="payment_cont_img" src="__PUBLIC__/images/wallet/qbfz.png"/></span>复制钱包地址</p>
-										<p class="payment_cont_qb"><span><img  class="payment_cont_img" src="__PUBLIC__/images/wallet/qbewm.png"/></span>请扫二维码</p>																			
+										<p class="payment_cont_qb"><span><img class="payment_cont_img" src="__PUBLIC__/images/wallet/qbfz.png" /></span>复制钱包地址</p>
+										<p class="payment_cont_qb"><span><img class="payment_cont_img" src="__PUBLIC__/images/wallet/qbewm.png" /></span>请扫二维码</p>
 									</div>
-									<p class="payment_cont_sc"><span><img class="payment_cont_img"  src="__PUBLIC__/images/wallet/qbxz.png"/></span>上传发票</p>
-									<div class="payment_cont_wz"><p>*请仔细检查转账钱包地址，如填写钱包地址错误导致公司没有收到这笔转账数额，公司将不承担次损失</p></div>
+									<p class="payment_cont_sc"><span><img class="payment_cont_img" src="__PUBLIC__/images/wallet/qbxz.png" /></span>上传发票</p>
+									<div class="payment_cont_wz">
+										<p>*请仔细检查转账钱包地址，如填写钱包地址错误导致公司没有收到这笔转账数额，公司将不承担次损失</p>
+									</div>
 								</div>
 							</div>
 							<div class="payment_cont_item">
 								<!--账户余额-->
-				        		<div class="amount">
-				        			<div class="bonus">输入金额</div>
-				        			<div class="t-inp-wrap">
-				        				<div class="t-inp">
-				        					<input class="number" type="number" placeholder="0"/>
-				        				</div>
-				        			</div>
-				        			
-				        			<div class="bonus">备注</div>
-				        			<div class="t-inp-wrap">
-				        				<div class="t-inp">
-				        					<input class="number" type="text"/>
-				        				</div>
-				        			</div>
-				        		</div>
+								<div class="amount">
+									<div class="bonus">输入金额</div>
+									<div class="t-inp-wrap">
+										<div class="t-inp">
+											<input class="number" type="number" placeholder="0" />
+										</div>
+									</div>
+
+									<div class="bonus">备注</div>
+									<div class="t-inp-wrap">
+										<div class="t-inp">
+											<input class="number" type="text" />
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 					<!--选择付款方式-->
-					
+
 					<div class="amount">
-						<span>投资额度：</span><input class="inp" type="number" value="" placeholder="请输入人民币"/>
-					</div>	
-					
+						<span>投资额度：</span><input class="inp" type="number" value="" placeholder="请输入人民币" />
+					</div>
+
 					<div class="wtf_xiala">
-							<p><!--<img src="../../../public/images/wallet/wtf_tx.jpg" />--></p>
-							<p style="margin-left: 0.1rem;width: 25%;" id="cu_name_input" data-name="">选择币种</p>
-							<p style="width: 53%;text-align: right;"></p>
-							<p class="p1" style="color: #7596d8;">CNY</p>
-							<p class="wtf_xl"><img style="width: 0.2rem;height: 0.15rem;padding-top: 0;margin-left: 0.15rem;" src="../../../public/images/wallet/wtf_xiala.jpg" /></p>
+						<p>
+							<!--<img src="../../../public/images/wallet/wtf_tx.jpg" />-->
+						</p>
+						<p style="margin-left: 0.1rem;width: 25%;" id="cu_name_input" data-name="">选择币种</p>
+						<p style="width: 53%;text-align: right;"></p>
+						<p class="p1" style="color: #7596d8;">CNY</p>
+						<p class="wtf_xl"><img style="width: 0.2rem;height: 0.15rem;padding-top: 0;margin-left: 0.15rem;" src="../../../public/images/wallet/wtf_xiala.jpg" /></p>
 					</div>
 					<div class="wtf_item2">
-					<div class="wtf_item2_div">
-						<p>当前投资额度</p >
-						<div class="wtf_item2_c">
-							<p class="in_money">0.00</p >
-							<p>CNY</p >
+						<div class="wtf_item2_div">
+							<p>当前投资额度</p>
+							<div class="wtf_item2_c">
+								<p class="in_money">0.00</p>
+								<p>CNY</p>
+							</div>
 						</div>
-					</div>
-					<div class="wtf_item2_div">
-						<p>币种单价</p >
-						<div class="wtf_item2_c">
-							<p class="cu_price">0.00</p >
-							<p>CNY</p >
+						<div class="wtf_item2_div">
+							<p>币种单价</p>
+							<div class="wtf_item2_c">
+								<p class="cu_price">0.00</p>
+								<p>CNY</p>
+							</div>
 						</div>
-					</div>
-					<div class="wtf_item2_div">
-						<p>币种数量</p >
-						<div class="wtf_item2_c">
-							<p class="p3" style="color: #4ecdd0;">0.00000000</p >
-							<p></p >
+						<div class="wtf_item2_div">
+							<p>币种数量</p>
+							<div class="wtf_item2_c">
+								<p class="p3" style="color: #4ecdd0;">0.00000000</p>
+								<p></p>
+							</div>
 						</div>
-					</div>
-					<!-- <div class="wtf_item2_div">
+						<!-- <div class="wtf_item2_div">
 						<p>复投最低限额</p >
 						<div class="wtf_item2_c">
 							<p class="p2" style="color: #4ecdd0;">9909.57515600</p >
@@ -117,24 +127,24 @@
 						</div>
 					</div> -->
 					</div>
-					
-					  
-					  
+
+
+
 					<div class="sum">投资</div>
 					<!--选择币值-弹框-->
 					<div class="assetPopup showZ">
-						
+
 						<div class="det">币值详情</div>
-						
+
 						<div class="currency">
 							{foreach name="htd_currency" item="vo"}
-								<p class="termBox clearfix" onclick="obtainFun('{$vo.id}','{$vo.alias_name}','{$vo.price}')" >
-									<span>{$vo.alias_name}<font>：</font></span>
-									<span>{$vo.price}</span><br>
-								</p>
+							<p class="termBox clearfix" onclick="obtainFun('{$vo.id}','{$vo.alias_name}','{$vo.price}')">
+								<span>{$vo.alias_name}<font>：</font></span>
+								<span>{$vo.price}</span><br>
+							</p>
 							{/foreach}
 						</div>
-<!-- 
+						<!-- 
 						<div class="currency">
 							{foreach name="user_wallet" item="user_wallet"}
 								<p class="termBox clearfix" onclick="obtainFun('id')">
@@ -145,61 +155,61 @@
 						</div -->
 						<i class="iconfont icon hideIcon">&#xe66f;</i>
 					</div>
-					
+
 					<!--总投资-弹框-->
 					<div class="assetPopup pop">
-						
+
 						<div class="det">资产</div>
-						
+
 						<!-- 标题 -->
-				        <div class="thead-zp">
-				            <ul>
-				                <li>名称</li>
-				                <li>数量</li>
-				                <li>单价</li>
-				                <li>金额</li>
-				            </ul>
-				        </div>
-				        <!--详情-->
-				        <div class="tbody-zp">
-				            <ul>
-				                <li>
-				                    <div class="name">Alan</div>
-				                    <div class="number">10</div>
-				                    <div class="price">99.00</div>
-				                    <div class="total-price">990.00</div>
-				                </li>
-				                <li>
-				                    <div class="name">Alan</div>
-				                    <div class="number">10</div>
-				                    <div class="price">99.00</div>
-				                    <div class="total-price">990.00</div>
-				                </li>
-				                <li>
-				                    <div class="name">Alan</div>
-				                    <div class="number">10</div>
-				                    <div class="price">99.00</div>
-				                    <div class="total-price">990.00</div>
-				                </li>
-				                <li>
-				                    <div class="name">Alan</div>
-				                    <div class="number">10</div>
-				                    <div class="price">99.00</div>
-				                    <div class="total-price">990.00</div>
-				                </li>
-				                <li>
-				                    <div class="name">Alan</div>
-				                    <div class="number">10</div>
-				                    <div class="price">99.00</div>
-				                    <div class="total-price">990.00</div>
-				                </li>
-				           
-				            </ul>
-        				</div>
-        				
+						<div class="thead-zp">
+							<ul>
+								<li>名称</li>
+								<li>数量</li>
+								<li>单价</li>
+								<li>金额</li>
+							</ul>
+						</div>
+						<!--详情-->
+						<div class="tbody-zp">
+							<ul>
+								<li>
+									<div class="name">Alan</div>
+									<div class="number">10</div>
+									<div class="price">99.00</div>
+									<div class="total-price">990.00</div>
+								</li>
+								<li>
+									<div class="name">Alan</div>
+									<div class="number">10</div>
+									<div class="price">99.00</div>
+									<div class="total-price">990.00</div>
+								</li>
+								<li>
+									<div class="name">Alan</div>
+									<div class="number">10</div>
+									<div class="price">99.00</div>
+									<div class="total-price">990.00</div>
+								</li>
+								<li>
+									<div class="name">Alan</div>
+									<div class="number">10</div>
+									<div class="price">99.00</div>
+									<div class="total-price">990.00</div>
+								</li>
+								<li>
+									<div class="name">Alan</div>
+									<div class="number">10</div>
+									<div class="price">99.00</div>
+									<div class="total-price">990.00</div>
+								</li>
+
+							</ul>
+						</div>
+
 						<div class="iconfont icon hideTz">&#xe66f;</div>
 					</div>
-					
+
 					<!--点击投资-二维码-弹框-->
 					<!--<div class="code-up hideEvm">
 						<div class="site">							
@@ -214,9 +224,9 @@
 						<i class="iconfont shut">&#xe66f;</i>
 						
 						<input type="file" id="f"  name="f" style="display:none"/>-->
-												
-						<!--进度条-->
-						<!--<div id="wrapper">
+
+					<!--进度条-->
+					<!--<div id="wrapper">
 							<div class="loader-container">
 							  <div class="meter">0</div>
 							  <span class="runner"></span>
@@ -227,45 +237,47 @@
 							<div class="notarize" onclick="sc(this);">确认投资</div>
 						</div>
 					</div>-->
-					
-        		</div>
-        		<div class="zjy_box_conten_item">
-        			<table width="90%" border="1" cellspacing="0" cellpadding="0">
-        				<tr>
-        					<th>日期</th>
-        					<th>币种</th>
-        					<th>数量</th>
-        					<th>单价</th>      					
-        					<th>金额</th>      					
+
+				</div>
+				<div class="zjy_box_conten_item">
+					<table width="90%" border="1" cellspacing="0" cellpadding="0">
+						<tr>
+							<th>日期</th>
+							<th>币种</th>
+							<th>数量</th>
+							<th>单价</th>
+							<th>金额</th>
 						</tr>
 						{foreach name="user_order" item="vo"}
-        				<tr>
-        					<td>{$vo.create_time|date="Ymd",###}</td>
-        					<td>{$vo.cu_name}</td>
-        					<td>{$vo.num}</td>
-        					<td>{$vo.price}</td>        					
-        					<td>{$vo.total_money}</td>        					
+						<tr>
+							<td>{$vo.create_time|date="Ymd",###}</td>
+							<td>{$vo.cu_name}</td>
+							<td>{$vo.num}</td>
+							<td>{$vo.price}</td>
+							<td>{$vo.total_money}</td>
 						</tr>
 						{/foreach}
-        			</table>
-        		</div>
-        		
-        	</div>
-        </div>
-        <!-- 底部导航 -->
-        <div class="bottomNavWrap container" id="bottomNavWrap" data-id="{$id}"></div>
-    </div>
-    
-    <!--弹框-阴影-->
+					</table>
+				</div>
+
+			</div>
+		</div>
+		<!-- 底部导航 -->
+		<div class="bottomNavWrap container" id="bottomNavWrap" data-id="{$id}"></div>
+	</div>
+
+	<!--弹框-阴影-->
 	<div class="shadow"></div>
-	
+
 	<!-- <script src="__PUBLIC__/js/public/jquery-1.8.3.min.js"></script> -->
-	<script src="__PUBLIC__/js/public/tab.js" ></script>
-	<script  src="__PUBLIC__/js/wallet/waller.js" ></script>
+	<script src="__PUBLIC__/js/public/tab.js"></script>
+	<script src="__PUBLIC__/js/wallet/waller.js"></script>
 	<script src="__PUBLIC__/plugins/layer/layer-min.js"></script>
-    <!--底部nav=>Tab功能-->
+	<script src="__PUBLIC__/plugins/qrcode/qrcode.js"></script>
+	<!--底部nav=>Tab功能-->
 	<script src="__PUBLIC__/js/public/bottomNavJs.js"></script>
-<script>
-</script>
+	<script>
+	</script>
 </body>
+
 </html>
