--- a/public/css/my/my.css
+++ b/public/css/my/my.css
@@ -3,7 +3,7 @@
 	padding-top: 1.5rem;
 	text-align: center;
 	color: white;
-	
+	box-sizing: border-box;
 }
 .headportrait{
 	
@@ -59,7 +59,14 @@
 	border-radius: .06rem;
 	padding-top: 1rem;
 	padding-bottom: .5rem;
+	box-sizing: border-box;
 
+	
+}
+.nickname{
+	
+	padding-top: .1rem;
+	box-sizing: border-box;
 	
 }
 .usernameear{
@@ -74,7 +81,7 @@
 	display: inline-block;
 	width: .4rem;
 	height: .4rem;	
-	margin-left: .3rem;
+	margin-left: .1rem;
 	margin-right: .1rem;
 }
 .left img{
@@ -83,7 +90,7 @@
 }
 .username{
 	display: inline-block;
-	width: 1.4rem;
+	width: 1.1rem;
 	height: .69rem;
 	line-height: .69rem;
 	position: absolute;
@@ -94,16 +101,17 @@
 .text{
 	
 	display: inline-block;
-	width: 2.7rem;
-	height: .69rem;
-	line-height: .69rem;
+	width: 3.9rem;
+	height: .39rem;
+	line-height: .39rem;
 	position: absolute;
-	top: -.1rem;
-	left: 2.5rem;
+	top: -.03rem;
+	left: 2rem;
 	/*border:1px solid green;*/	
 	text-overflow:ellipsis;
     overflow:hidden;
     white-space: nowrap; 
+    border-bottom: 1px solid white;
 	
 }
 .right{
@@ -123,12 +131,72 @@
 	width: 100%;
 	
 }
-.text3{
+.name{	
+	position: relative;
+	display: block;
+	width: 100%;
 	
+
+}
+.name img{
+	display: block;
+	width: .27rem; 
+	/*float: right;*/
+	/*margin-top:.26rem;*/
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	z-index: 1;
 	
+}
+.name span{
 	
+	color: #999999;
 	
 	
 }
 
+.tbody-zp{
+	width: 100%;
+	padding:0 0.3rem;
+	box-sizing: border-box;
+	margin-top: .5rem;
+	
+}
+.tbody-zp ul{
+	width: 84%;
+	margin: 0 8%;
+	border-radius:.2rem;
+	background-color: white;
+	
+}
+.tbody-zp ul li{
+    height: 0.75rem; 
+    display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 0.26rem;
+    line-height: .8rem;
+    margin: 0 .3rem;
+    border-bottom: .02rem solid #999999;	
+  
+}
+.tbody-zp ul li:last-child{
+	
+	
+	border-bottom: none;
+	
+}
 
+
+.tbody-zp ul li a span:nth-child(2){
+	
+	float: right;
+	
+}
