--- a/application/index/view/my_my.html
+++ b/application/index/view/my_my.html
@@ -25,7 +25,7 @@
 					</span>
 			</div>
 
-			<!--个人头像和昵称-->
+			<!--个人头像和昵称 我的-->
 			<div class="header">
 				<img src="../../../public/images/default.png" class="headportrait" />
 				<br/>
@@ -75,6 +75,7 @@
 							<span>交易所</span>
 							<img src="__PUBLIC__/images/my/jiantou.png" />
 						</a>
+						
 					</li>
 					<li  onclick="shopAlert('暂未开放，敬请期待')">
 						<a class="name">
