--- a/application/index/view/my_my.html
+++ b/application/index/view/my_my.html
@@ -20,9 +20,11 @@
 			<div class="header-zp">
 				<span class="return" onclick="returnFun()"><img src="__PUBLIC__/images/public/return-zp@2x.png" /></span>
 				<h3>我的</h3>
-				<span class="share-btn bottmBut" onclick="jumpFun('editUser.html')">
+				<a href="{:url('index/my/editUser')}">
+					<span class="share-btn bottmBut">
 						<img src="__PUBLIC__/images/public/share-btn-zp.png" />
 					</span>
+				</a>
 			</div>
 
 			<!--个人头像和昵称-->
