--- a/application/index/view/my_my.html
+++ b/application/index/view/my_my.html
@@ -7,104 +7,73 @@
 		<title class="pageTopTitle" page-id="2">我的</title>
 		<script src="__PUBLIC__/js/public/rem.js"></script>
 		<link rel="stylesheet" href="__PUBLIC__/css/public/reset.css" />
-		<link rel="stylesheet" href="__PUBLIC__/css/public/base.css">
 		<link rel="stylesheet" href="__PUBLIC__/css/public/bottomNav.css" />
-		<link rel="stylesheet" href="__PUBLIC__/css/public/alertWrap.css">
 		<link rel="stylesheet" href="__PUBLIC__/css/my/my.css" />
-		
+		<link rel="stylesheet" href="__PUBLIC__/css/public/base.css">
+
 	</head>
 
 	<body>
-		<div id="wrap">
-			<!--header-->
-			<div class="header-zp">
-				<span class="return" onclick="returnFun()"><img src="__PUBLIC__/images/public/return-zp@2x.png" /></span>
-				<h3>我的</h3>
-				<a href="{:url('index/my/editUser')}">
-					<span class="share-btn bottmBut">
+		<!--header-->
+		<div class="tab">
+			<div id="wrap">
+
+				<!-- 头部 -->
+				<div class="header-zp">
+					<span class="return" onclick="returnFun()"><img src="__PUBLIC__/images/public/return-zp@2x.png" /></span>
+					<h3>我的</h3>
+					<span class="share-btn bottmBut" onclick="jumpFun('editUser.html')">
 						<img src="__PUBLIC__/images/public/share-btn-zp.png" />
 					</span>
-				</a>
-			</div>
+				</div>
+				
+				
+				<!--个人头像和昵称-->
+				<div class="header">
+					<img src="../../../public/images/default.png" class="headportrait"/>
+					<br/>
+					<p class="nickname">{$user.username}</span>
+				</div>
+				
+				
+				
+               <!--个人信息-->
+				<ul id="con">
+					<li class="show" style="display: block;">
+						<div class="mingpian">
+							<div class="usernameear">
+								<div class="left"><img src="__PUBLIC__/images/my/youxiang.png" /></div>
+								<span class="username">电邮:</span>
+								<span class="text" style="color: #8CFFFF;">{$user.usermail}</span>
+							</div>
+							<div class="usernameear">
+								
+								<div class="left"><img src="__PUBLIC__/images/my/shouji.png" /></div>
+								<span class="username">电话号码:</span>
+								<span class="text">{$user.mobile}</span>
+							</div>
+							<div class="usernameear">
+								<div class="left"><img src="__PUBLIC__/images/my/ren.png" /></div>
+								<span class="username">推广码:</span>
+								<!--<span class="text">{$user.mobile}</span>-->
+								<span class="text3 text">{$user.promotion}</span>
+								
+							</div>
 
-			<!--个人头像和昵称-->
-			<div class="header">
-				<img src="../../../public/images/default.png" class="headportrait" />
-				<br/>
-				<p class="nickname">{$user.username}</span>
-			</div>
-
-			<!--个人信息-->
-			<ul id="con">
-
-				<li class="show" style="display: block;">
-					<div class="mingpian">
-						<div class="usernameear">
-							<div class="left"><img src="__PUBLIC__/images/my/email.png" /></div>
-							<span class="username" style="user-select:none;">电子邮箱:</span>
-							<span class="text" style="user-select:none;">{$user.usermail}</span>
 						</div>
-						<div class="usernameear">
-
-							<div class="left"><img src="__PUBLIC__/images/my/phone.png" /></div>
-							<span class="username" style="user-select:none;">电话号码:</span>
-							<span class="text" style="user-select:none;">{$user.mobile}</span>
-						</div>
-						<div class="usernameear">
-							<div class="left"><img src="__PUBLIC__/images/my/person.png" /></div>
-							<span class="username" style="user-select:none;">推广码:</span>
-							<!--<span class="text">{$user.mobile}</span>-->
-							<span class="text3 text">{$user.promotion}</span>
-
-						</div>
-
-					</div>
-				</li>
-
-			</ul>
-
-			<!--列表项-->
-			<div class="tbody-zp">
-				<ul>
-					<li onclick="shopAlert('暂未开放，敬请期待')">
-						<a class="name">
-							<span>商城</span>
-							<img src="__PUBLIC__/images/my/jiantou.png" />
-						</a>
 					</li>
-					<li  onclick="shopAlert('暂未开放，敬请期待')">
-						<a class="name">
-							<span>交易所</span>
-							<img src="__PUBLIC__/images/my/jiantou.png" />
-						</a>
-					</li>
-					<li  onclick="shopAlert('暂未开放，敬请期待')">
-						<a class="name">
-							<span>基金</span>
-							<img src="__PUBLIC__/images/my/jiantou.png" />
-						</a>
-					</li>
-					<li  onclick="shopAlert('暂未开放，敬请期待')">
-						<a class="name ">
-							<span>云服务</span>
-							<img src="__PUBLIC__/images/my/jiantou.png" />
-						</a>
-					</li>
-					
+
 				</ul>
-
 			</div>
 		</div>
 		<!-- 底部导航 -->
-		<div class="bottomNavWrap container" id="bottomNavWrap" data-id="{$id}"></div>
+		<div class="bottomNavWrap container" id="bottomNavWrap" data-id="{$id}" ></div>
 
 		<script src="__PUBLIC__/js/public/jquery-1.8.3.js"></script>
-		<script src="__PUBLIC__/js/public/publicAlert.js"></script>
 		<script src="__PUBLIC__/js/my/my.js"></script>
 		<!--底部nav=>Tab功能-->
 		<script src="__PUBLIC__/js/public/bottomNavJs.js"></script>
 		<script src="__PUBLIC__/js/public/base.js"></script>
-		
 	</body>
 
 </html>
