--- a/public/css/wallet/wallet.css
+++ b/public/css/wallet/wallet.css
@@ -83,11 +83,13 @@ th,td{
 	line-height: 1.25rem;
 }
 .amount {
-	margin-top: 10%;
+	margin-top: 3%;
+	
 }
 .amount span {
 	font-size: .35rem;
 	font-weight: 900;
+	padding-left: 25%;
 }
 .amount .inp {
 	width: 35%;
@@ -158,6 +160,22 @@ th,td{
 .tu img {
 	width: 100%;
 }
+.p_text{
+	width: 6rem;
+    margin: 0 auto;
+    background: #0f184f;
+    border: 1px solid #4080ff;
+    color: #fff;
+    border-radius: .06rem;
+    padding: .08rem .03rem;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    word-break: break-word;
+    
+    
+    font-size: .26rem;
+}
 .code-up .shut {
 	position: absolute;
 	top: 0;
@@ -197,8 +215,8 @@ th,td{
 	margin-top: 1.2rem;
 }
 .det {
-	position: fixed;
-	width: 90%;
+	position: absolute;
+	width: 100%;
 	font-size: .35rem;
 	font-weight: 900;
 	line-height: .7rem;
@@ -211,9 +229,9 @@ th,td{
 	-webkit-box-sizing: border-box;
 }
 .assetPopup .iconfont {
-	position: fixed;
-	top: 2.25rem;
-	right: .45rem;
+	position: absolute;
+	top: 2px;
+	right: 0;
 	font-size: .6rem;
 }
 /*进度条*/
@@ -448,6 +466,9 @@ input::-webkit-inner-spin-button {
 	width: 100%;
 	
 }
+.payment_cont {
+	background: #0f184f;
+}
 .payment .wq_fa{
 	display: inline-block;
 	width: .4rem;
@@ -466,6 +487,7 @@ input::-webkit-inner-spin-button {
 	vertical-align: bottom;
 }
 .payment .payment_ul{
+	margin: 0 0 3%;
 	display: flex;
 	text-align: center;
 }
@@ -475,8 +497,15 @@ input::-webkit-inner-spin-button {
 .payment_cont_item{
 	display: none;
 }
-.payment_cont_item h3{
-	margin: .3rem .3rem;
+.fshe{
+	padding: 3% 5%;
+    color: #7c9ee1;
+    font-size: .35rem;
+    line-height: .85rem;
+	
+}
+.payment_cont_item {
+	margin: .3rem 0;
 }
 .payment_cont_item .payment_cont_text textarea{
 	width: 90%;
@@ -522,26 +551,75 @@ input::-webkit-inner-spin-button {
 /*付款结束*/
 
 /*账户余额*/
-.amount .bonus {
-	padding: 0 0 0 5%;
+.am .bonus {
+	padding: 3% 0 0 5%;
 	color: #7c9ee1;
 	font-size: .35rem;
 	line-height: .75rem;
 }
-.amount .t-inp-wrap {
+.am .t-inp-wrap {
 	padding: 5% 0;
 	width: 100%;
 	background: #0f184f;
 }
-.amount .t-inp-wrap .t-inp {
+.am .t-inp-wrap .t-inp {
 	margin: 0 auto;
 	width: 90%;	
 	border: .01rem solid #2d3b7c;
 	border-radius: 5px;
 }
-.amount .t-inp-wrap .t-inp .number {
+.am .t-inp-wrap .t-inp .number {
 	padding: 2%;
 	width: 85%;
 	height: .6rem;
 	color: #fff;
+}
+
+/*二维码弹框*/
+.payment_wenma{
+	position: relative;
+	width: 70%;
+	height: 6rem;
+	background-color:#070a41;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	border: 1px solid #5b84fa;
+	border-radius:.3rem ;
+	z-index: 66;
+	display: none;
+}
+
+.qb_bg{
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.4);
+	z-index: 33;
+	display: none;
+	
+}
+.payment_wenma_sc{
+	display: block;
+	position: absolute;
+	top: .1rem;
+	right: .1rem;
+	z-index: 1;	
+	width: .5rem;
+	height: .5rem;
+	/*float: right;*/
+}
+.payment_wenma_Two {
+	display: block;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 1;	
+	margin: auto;
+	max-width: 80%;
+	max-height: 80%;
 }
