--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -34,6 +34,52 @@
 						<div class="asset">总资产<span style="font-size: .3rem;"></span></div>
 					</div>
 
+					
+
+					<div class="amount">
+						<span>投资额度：</span><input class="inp" type="number" value="" placeholder="请输入人民币" />
+					</div>
+
+					<div class="wtf_xiala">
+						<p>
+							<!--<img src="../../../public/images/wallet/wtf_tx.jpg" />-->
+						</p>
+						<p style="margin-left: 0.1rem;width: 25%;" id="cu_name_input" data-name="">选择币种</p>
+						<p style="width: 53%;text-align: right;"></p>
+						<p class="p1" style="color: #7596d8;">CNY</p>
+						<p class="wtf_xl"><img style="width: 0.2rem;height: 0.15rem;padding-top: 0;margin-left: 0.15rem;" src="../../../public/images/wallet/wtf_xiala.jpg" /></p>
+					</div>
+					<div class="wtf_item2">
+						<div class="wtf_item2_div">
+							<p>当前投资额度</p>
+							<div class="wtf_item2_c">
+								<p class="in_money">0.00</p>
+								<p>CNY</p>
+							</div>
+						</div>
+						<div class="wtf_item2_div">
+							<p>币种单价</p>
+							<div class="wtf_item2_c">
+								<p class="cu_price">0.00</p>
+								<p>CNY</p>
+							</div>
+						</div>
+						<div class="wtf_item2_div">
+							<p>币种数量</p>
+							<div class="wtf_item2_c">
+								<p class="p3" style="color: #4ecdd0;">0.00000000</p>
+								<p></p>
+							</div>
+						</div>
+						<!-- <div class="wtf_item2_div">
+						<p>复投最低限额</p >
+						<div class="wtf_item2_c">
+							<p class="p2" style="color: #4ecdd0;">9909.57515600</p >
+							<p>ADA</p >
+						</div>
+					</div> -->
+					</div>
+
 					<!--选择付款方式-->
 					<div class="payment">
 						<div class="fshe">选择付款方式</div>
@@ -84,52 +130,6 @@
 						</div>
 					</div>
 					<!--选择付款方式-->
-
-					<div class="amount">
-						<span>投资额度：</span><input class="inp" type="number" value="" placeholder="请输入人民币" />
-					</div>
-
-					<div class="wtf_xiala">
-						<p>
-							<!--<img src="../../../public/images/wallet/wtf_tx.jpg" />-->
-						</p>
-						<p style="margin-left: 0.1rem;width: 25%;" id="cu_name_input" data-name="">选择币种</p>
-						<p style="width: 53%;text-align: right;"></p>
-						<p class="p1" style="color: #7596d8;">CNY</p>
-						<p class="wtf_xl"><img style="width: 0.2rem;height: 0.15rem;padding-top: 0;margin-left: 0.15rem;" src="../../../public/images/wallet/wtf_xiala.jpg" /></p>
-					</div>
-					<div class="wtf_item2">
-						<div class="wtf_item2_div">
-							<p>当前投资额度</p>
-							<div class="wtf_item2_c">
-								<p class="in_money">0.00</p>
-								<p>CNY</p>
-							</div>
-						</div>
-						<div class="wtf_item2_div">
-							<p>币种单价</p>
-							<div class="wtf_item2_c">
-								<p class="cu_price">0.00</p>
-								<p>CNY</p>
-							</div>
-						</div>
-						<div class="wtf_item2_div">
-							<p>币种数量</p>
-							<div class="wtf_item2_c">
-								<p class="p3" style="color: #4ecdd0;">0.00000000</p>
-								<p></p>
-							</div>
-						</div>
-						<!-- <div class="wtf_item2_div">
-						<p>复投最低限额</p >
-						<div class="wtf_item2_c">
-							<p class="p2" style="color: #4ecdd0;">9909.57515600</p >
-							<p>ADA</p >
-						</div>
-					</div> -->
-					</div>
-
-
 
 					<div class="sum">投资</div>
 					<!--选择币值-弹框-->
@@ -258,7 +258,7 @@
 							<td>{$vo.total_money}</td>
 						</tr>
 						{/foreach}
-<<<<<<< HEAD
+
         			</table>
         		</div>
         		
@@ -278,12 +278,12 @@
     </div>
     
     <!--弹框-阴影-->
-	<div class="shadow"></div>
+	<!-- <div class="shadow"></div> -->
 	
 	 <script src="__PUBLIC__/js/public/jquery-1.8.3.min.js"></script> 
 	<script src="__PUBLIC__/js/public/tab.js" ></script>
 	<script  src="__PUBLIC__/js/wallet/waller.js" ></script>
-=======
+
 					</table>
 				</div>
 
@@ -294,17 +294,16 @@
 	</div>
 
 	<!--弹框-阴影-->
-	<div class="shadow"></div>
+	<!-- <div class="shadow"></div> -->
 
 	<!-- <script src="__PUBLIC__/js/public/jquery-1.8.3.min.js"></script> -->
 	<script src="__PUBLIC__/js/public/tab.js"></script>
 	<script src="__PUBLIC__/js/wallet/waller.js"></script>
->>>>>>> 2ab31371552936f1f9866ddd709958a3dbc8aef8
+
 	<script src="__PUBLIC__/plugins/layer/layer-min.js"></script>
 	<script src="__PUBLIC__/qrcode/qrcode.js"></script>
 	<!--底部nav=>Tab功能-->
 	<script src="__PUBLIC__/js/public/bottomNavJs.js"></script>
-<<<<<<< HEAD
 	<script src="__PUBLIC__/js/public/clipboard.js"></script>
 	  <script>
         $("#codeBtn").click(function(){
@@ -323,10 +322,6 @@
     </script>
 <script>
 </script>
-=======
-	<script>
-	</script>
->>>>>>> 2ab31371552936f1f9866ddd709958a3dbc8aef8
 </body>
 
 </html>
