--- a/public/css/wallet/wallet.css
+++ b/public/css/wallet/wallet.css
@@ -83,7 +83,7 @@ th,td{
 	line-height: 1.25rem;
 }
 .amount {
-	margin-top: 3%;
+	margin-top: 8%;
 	
 }
 .amount span {
@@ -406,7 +406,7 @@ input::-webkit-inner-spin-button {
 .wtf_xiala img{width: 0.3rem;height: 0.3rem;padding-top :0.1rem}
 
 .wtf_item2_div{height: 0.2rem;margin: 0.4rem;}
-.wtf_item2{padding: 0.1rem 0.2rem;background: #242e65;margin: 0.3rem 0.5rem;overflow-y: scroll;height: 3.5rem;}
+.wtf_item2{padding: 0.1rem 0.2rem;background: #242e65;margin: 0.3rem 0.5rem;overflow-y: scroll;}
 
 .wtf_item2_div p{display: inline-block;}
 .wtf_item2_div p:nth-child(1){font-size: 0.24rem;color: #6a86c7;float: left;}
@@ -465,6 +465,9 @@ input::-webkit-inner-spin-button {
 .payment{
 	width: 100%;
 	
+}
+.payment h3{
+	padding: .5rem;
 }
 .payment_cont {
 	background: #0f184f;
