--- a/application/index/view/my_edituser.html
+++ b/application/index/view/my_edituser.html
@@ -31,7 +31,8 @@
 						<p>电话号码:</p>
 						<input type="text" value="18605480486" />
 					</li>
-					<li onclick="jumpFun('setPass.html')">
+					<!-- <a href="{:url('index/my/set_pass')}"></a> -->
+					<li onclick="jumpFun('set_pass.html')">
 						<p>修改密码</p>
 						<img src="__PUBLIC__/images/home/lj_sz_img1.png" />
 					</li>
