--- a/application/index/view/my_edituser.html
+++ b/application/index/view/my_edituser.html
@@ -36,7 +36,7 @@
 						<p>修改密码</p>
 						<img src="__PUBLIC__/images/home/lj_sz_img1.png" />
 					</li>
-					<li class="lj_last_li" onclick="jumpFun('upIDCardNew.html')">
+					<li class="lj_last_li" onclick="jumpFun('up_id_card_new.html')">
 						<p>上传身份证</p>
 						<img src="__PUBLIC__/images/home/lj_sz_img1.png" />
 					</li>
