--- a/application/admin/view/Income_dynamic_income.html
+++ b/application/admin/view/Income_dynamic_income.html
@@ -5,12 +5,11 @@
             <!--<a href="{:url('admin/user/add')}" class="layui-btn layui-btn-sm" id="add" style="float:left">-->
             <!--<i class="layui-icon">&#xe608;</i> 添加用户-->
             <!--</a>-->
-            <form class="layui-form layui-form-pane" action="{:url('admin/income/search')}" method="get">
+            <form class="layui-form layui-form-pane" action="{:url('admin/income/dynamic_search')}" method="get">
                 <div class="layui-inline">
                     <label class="layui-form-label">手机号</label>
                     <div class="layui-input-inline">
                         <input type="text" name="keyword" value="{:session('userkeyword')}" placeholder="请输入手机号" class="layui-input">
-                        <input type="hidden" name="act" value="{$act}">
                     </div>
                 </div>
                 <div class="layui-inline">
