判断是否有推广码

--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -69,8 +69,13 @@
 							<span class="from-tit">推荐码:</span>
 							<div class="from-icon">
 								<img src="__PUBLIC__images/login/good.png" alt="">
+								{notempty name='$promotion'}
+									<input type="text" placeholder="请输入推荐码" name="directname" value="{$promotion}"  readonly  unselectable="on" class="pptt recommend">
+								{else/}
+									<input type="text" placeholder="请输入推荐码" name="directname"  class="pptt recommend">
+								{/notempty}
 								<!-- readonly  unselectable="on" -->
-								<input type="text" placeholder="请输入推荐码" name="directname" value="{$promotion}"  class="pptt recommend">
+								<!-- <input type="text" placeholder="请输入推荐码" name="directname" value="{$promotion}"  class="pptt recommend"> -->
 							</div>
 						</div>
 						<div class="send-codemsg mistake info"></div>
