--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -39,19 +39,19 @@
                     </a>
                 </li>
                 <li class="itemColor-2">
-                    <a href="{:url('Index/totalRevenue')}">
+                    <a href="{:url('index/totalrevenue')}">
                         <img src="__PUBLIC__/images/home/Profit-icon@2x.png" alt="">
                         <span>总收益</span>
                     </a>
                 </li>
                 <li class="itemColor-3">
-                    <a href="#">
+                    <a href="{:url('index/dayrevenue')}">
                         <img src="__PUBLIC__/images/home/Today's earnings-icon@2x.png" alt="">
                         <span>今日收益</span>
                     </a>
                 </li>
                 <li class="itemColor-4">
-                    <a href="#">
+                    <a href="{:url('index/money')}">
                         <img src="__PUBLIC__/images/home/wallet-icon@2x.png" alt="">
                         <span>钱包余额</span>
                     </a>
