--- a/public/css/wallet/wallet.css
+++ b/public/css/wallet/wallet.css
@@ -577,49 +577,41 @@ input::-webkit-inner-spin-button {
 
 /*二维码弹框*/
 .payment_wenma{
-	position: relative;
-	width: 70%;
-	height: 6rem;
-	background-color:#070a41;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	border: 1px solid #5b84fa;
-	border-radius:.3rem ;
-	z-index: 66;
-	display: none;
-}
-
-.qb_bg{
 	position: fixed;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0,0,0,0.4);
-	z-index: 33;
-	display: none;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    z-index: 10011;
+}
+.payment_wenma .qb_bg{
+	position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.4);
+    overflow: auto;
+}
+.payment_wenma .qb_bg_img{
+	width: 80%;
+	height: auto;
+	background-color: #070a41;
+	border: 1px solid #5b84fa;
+	position: relative;
+}
+.payment_wenma .qb_bg_img .payment_wenma_sc{
+	display: block;
+	right: 0;
+	
 	
 }
-.payment_wenma_sc{
-	display: block;
-	position: absolute;
-	top: .1rem;
-	right: .1rem;
-	z-index: 1;	
-	width: .5rem;
-	height: .5rem;
-	/*float: right;*/
-}
-.payment_wenma_Two {
-	display: block;
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	z-index: 1;	
-	margin: auto;
-	max-width: 80%;
-	max-height: 80%;
+.payment_wenma .qb_bg_img .payment_wenma_Two{
+	width: 2rem;
+	height: 2rem;
 }
