--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -7,7 +7,7 @@
 		<script src="/public/js/rem.js"></script>
 		<link rel="stylesheet" href="__PUBLIC__css/reset.css">
 		<link rel="stylesheet" href="__PUBLIC__css/base.css" />
-		<link rel="stylesheet" href="__PUBLIC__css/register.css">
+		<link rel="stylesheet" href="__PUBLIC__css/login/register.css">
 		<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
 	  <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
 </script>
